# XDs-Code

./: .gitignore  LICENSE  README.md  SECURITY.md  build-macos.sh  build-win.bat  index.html  package.json  pnpm-lock.yaml  sonar-project.properties  update.bat  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build-app.yml  build-installer.yml  build-site.yml  build-web.yml  build.yml  codeql.yml  publish-macos.yml  sonarcloud.yml  warm-cache.yml
installer/: .editorconfig  Installer.csproj  Installer.sln  MainWindow.xaml  MainWindow.xaml.cs  packages.config
installer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
installer/winget/manifests/x/xdpxi/xds-code/0.7.4/: xdpxi.xds-code.installer.yaml  xdpxi.xds-code.locale.en-US.yaml  xdpxi.xds-code.yaml
installer/winget/manifests/x/xdpxi/xds-code/0.7.5/: xdpxi.xds-code.installer.yaml  xdpxi.xds-code.locale.en-US.yaml  xdpxi.xds-code.yaml
installer/winget/manifests/x/xdpxi/xds-code/0.8.0/: xdpxi.xds-code.installer.yaml  xdpxi.xds-code.locale.en-US.yaml  xdpxi.xds-code.yaml
src/: App.css  App.tsx  Settings.tsx  Starter.tsx  app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: EditorWrapper.tsx  MediaPreview.tsx  Modal.tsx  SettingsPage.tsx  Sidebar.tsx  SidebarLegacy.tsx  StatusBar.tsx  Tabs.tsx  Terminal.tsx  TitleBar.tsx  TreeNode.tsx
src/hooks/: useModal.tsx
src/pages/: App.tsx  Settings.tsx  Starter.tsx
src/styles/: fontawesome.css  globals.css  legacy.css  one-light.css  windows-xp.css
src/utils/: fileHelpers.ts  types.ts
