[package]
name = "xds-code"
version = "0.6.3"
description = "XD's Code is a code editor that is inspired by VSC."
authors = ["XDPXI"]
edition = "2021"

[lib]
name = "xds_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
