[package]
name = "xds-code"
version = "0.8.0"
description = "XD's Code is a code editor that is inspired by Zed and VSC made using Tauri."
authors = ["XDPXI"]
edition = "2024"

[lib]
name = "xds_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.31", features = ["signal"] }
dirs = "6"
